tests/ui/bad-field-attr.stderr
error: #[error(transparent)] needs to go outside the enum or struct, not on an individual field
 --> tests/ui/bad-field-attr.rs:5:18
  |
5 | pub struct Error(#[error(transparent)] std::io::Error);
  |                  ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> tests/ui/bad-field-attr.rs:5:12
  |
5 | pub struct Error(#[error(transparent)] std::io::Error);
  |            ^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
